<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VrnBus</string>
    <string name="chip_ellipsis">&#8230;</string>
    <string name="select_buses">Выберите маршруты</string>
    <string name="search">Поиск</string>
    <string name="action_refresh">Обновить</string>
    <string name="title_activity_maps">Карта</string>
    <string name="enter_routes">Введите номера маршрутов</string>
    <string name="nav_header_subtitle">Автобусы Воронежа</string>
    <string name="action_settings">Настройки</string>
    <string name="nav_header_desc">Меню</string>
    <string name="Traffic">Пробки</string>
    <string name="close">закрыть</string>
    <string name="Referer">Реферер</string>
    <string name="Ок">Ок</string>
    <string name="Cancel">Отмена</string>
    <string name="enter_referer">Необходим только для служебного использования</string>
    <string name="favorite">Избранное</string>
    <string name="big_capacity">Большой вместимости</string>
    <string name="medium_capacity">Средней вместимости</string>
    <string name="small_capacity">Малой вместимости</string>
    <string name="trolleybus">Троллейбус</string>
    <string name="arrival_at">прибудет в ~</string>
    <string name="low_floor">Низкопольный</string>
    <string name="about">О программе</string>
    <string name="night_mode">Ночной режим</string>
    <string name="about_html"><![CDATA[
    <p><bold>Прогноз прибытия автобусов в Воронеже</bold><br>Сайт: <a href="http://vrnbus.herokuapp.com" target="_blank">vrnbus.herokuapp.com</a>
    <br>Telegram-бот: <a href="http://t.me/vrnbusbot" target="_blank">@vrnbusbot</a> (автор: Михаил Аксенов)
    <br>Android: <a href="https://play.google.com/store/apps/details?id=ru.boomik.vrnbus" target="_blank">https://play.google.com/store/apps/details?id=ru.boomik.vrnbus</a> (автор: Кирилл Ашихмин)
    <br>iOS: <a href="https://itunes.apple.com/us/app/vrnbus/id1436397112" target="_blank">https://itunes.apple.com/us/app/vrnbus/id1436397112</a> (автор: Денис Евграфов) </p>
    <p><bold>Город и транспорт</bold>
    <br>Telegram: канал <a href="http://t.me/vrntrans" target="_blank">@vrntrans</a>,
    <br>Telegram: чат <a href="http://t.me/vrntranschat" target="_blank">@vrntranschat</a>
    <br>ВКонтакте: <a href="https://vk.com/vrntrans" target="_blank">@vrntrans</a>
    <br>Facebook: <a href="https://www.facebook.com/vrntrans" target="_blank">@vrntrans</a></p>
    <p><bold>МБУ ЕОГПП </bold>
    <br><a href="https://eogpp-vrn.ru/" target="_blank">https://eogpp-vrn.ru/</a></p>
]]></string>
    <string name="osm_copyright"><![CDATA[© Участники <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a>]]></string>
    <string name="more">Ещё</string>
    <string name="showBuses">Показать на карте</string>
    <string name="default_notification_channel_id">Информация</string>
    <string name="whatsnew">Что нового?</string>
    <string name="cont">Продолжить</string>
    <string name="favorites">Избранные</string>
    <string name="all">Все</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="privacy_policy_menu">Политика конфиденц.</string>
    <plurals name="seconds">
        <item quantity="one">%d секунду</item>
        <item quantity="few">%d секунды</item>
        <item quantity="many">%d секунд</item>
    </plurals>
    <string name="rating_dialog_title">Нравится приложение?</string>
    <string name="rating_dialog_experience">Нравится приложение?</string>
    <string name="rating_dialog_maybe_later">Позже</string>
    <string name="rating_dialog_never">Никогда</string>
    <string name="rating_dialog_feedback_title">Отзыв</string>
    <string name="rating_dialog_submit">Отправить</string>
    <string name="rating_dialog_cancel">Отмена</string>
    <string name="rating_dialog_suggestions">Предложите нам, что пошло не так, и мы поработаем над этим!</string>
    <string name="rating_dialog_feedback_submitted">Спасибо! Ваш отзыв отправлен.</string>
    <string name="enter_station_name">Введите остановку</string>
    <string name="save">Сохранить</string>
    <string name="fave_edit">Для дальнейшего редактирования удерживайте палец на иконке избранного маршрута.</string>
    <string name="fave_delete">Удалить?</string>

    <string name="fave_item_home">Домой</string>
    <string name="fave_item_work">На работу</string>
    <string name="fave_item_man">К человеку</string>
    <string name="fave_item_one">Первый</string>
    <string name="fave_item_two">Второй</string>
    <string name="fave_item_three">Третий</string>
    <string name="fave_item_four">Четвертый</string>
    <string name="fave_item_five">Пятый</string>
</resources>
