<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="false"
    android:orientation="vertical"
    tools:ignore="KeyboardInaccessibleWidget">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/corner_background"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp">


            <ImageView
                android:id="@+id/icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_home" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:textColor="@color/textColor"
                android:textSize="22sp"
                tools:text="Fave" />

            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/fave_delete"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <ru.boomik.vrnbus.views.ClearableMultiAutoCompleteTextView
            android:id="@+id/busesAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:completionThreshold="1"
            android:hint="@string/enter_station_name"
            android:inputType="textCapWords|textCapSentences|textMultiLine" />


        <com.hootsuite.nachos.NachoTextView
            android:id="@+id/nachoRoutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:completionThreshold="1"
            android:hint="@string/enter_routes"
            android:inputType="textMultiLine" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/fave_edit"
            android:textColor="@color/textColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/Cancel"
                android:textAlignment="center"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/save"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:textAlignment="center"
                android:textColor="@color/textColor" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
