<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:clickable="true"
    android:orientation="vertical"
    tools:ignore="KeyboardInaccessibleWidget">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/corner_background"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">


        <com.hootsuite.nachos.NachoTextView
            android:id="@+id/nacho_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:completionThreshold="1"
            android:hint="@string/enter_routes"
            android:inputType="textMultiLine" />


        <Button
            android:id="@+id/search"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/search" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/all"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/corner_background"
            android:text="@string/all" />

        <Button
            android:id="@+id/favorites"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/corner_background"
            android:text="@string/favorites" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/routesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/corner_background"
        tools:itemCount="4"
        tools:listitem="@layout/route_cell" />

</LinearLayout>
